--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chai-bignumber": "3.0.0",
     "truffle": "^5.2.1",
     "truffle-flattener": "1.5.0",
+    "dotenv": "8.2.0",
     "truffle-hdwallet-provider-privkey": "0.3.0",
     "web3": "1.2.6"
   },
